makefile/testData/highlighting/unresolved.mk
a: <error descr="Unresolved prerequisite">b</error>